fixing container too small message

--- a/src/ui/public/vislib/styles/_layout.less
+++ b/src/ui/public/vislib/styles/_layout.less
@@ -92,7 +92,7 @@
 
 .chart-wrapper {
   display: flex;
-  flex: 1 0 20px;
+  flex: 1 0 1px;
   overflow: visible;
   margin: 0;
   min-height: 0;
@@ -182,7 +182,7 @@
 
 .x-axis-div {
   min-height: 0px;
-  min-width: 20px;
+  min-width: 1px;
   margin: 0px 5px;
   width: 100%;
 }
